--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -84,6 +84,12 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/pickTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Open At" />
+
     </LinearLayout>
 
     <fr.castorflex.android.circularprogressbar.CircularProgressBar
