--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -17,7 +17,7 @@
         android:layout_toRightOf="@+id/appIcon"
         android:layout_marginTop="@dimen/_4sdp"
         android:layout_marginLeft="@dimen/_8sdp"
-        android:text="Random Restaurant Generator"
+        android:text="@string/app_name"
         android:textStyle="bold"/>
 
     <TextView
