--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/_10sdp">
 
@@ -14,11 +15,11 @@
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/appIcon"
-        android:layout_marginTop="@dimen/_4sdp"
         android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:layout_toRightOf="@+id/appIcon"
         android:text="@string/app_name"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/appVersion"
@@ -33,29 +34,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/appVersion"
-        android:text="@string/aboutText"
+        android:layout_marginBottom="@dimen/_4sdp"
         android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_4sdp"/>
+        android:text="@string/aboutText" />
 
     <TextView
         android:id="@+id/githubLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/aboutText"
-        android:layout_marginBottom="@dimen/_4sdp"/>
+        android:layout_marginBottom="@dimen/_4sdp" />
 
     <TextView
         android:id="@+id/license"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/githubLink"
-        android:text="@string/license"/>
+        android:text="@string/license" />
 
     <org.sufficientlysecure.htmltextview.HtmlTextView
         android:id="@+id/htmlAbout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/license"
-        android:layout_marginTop="@dimen/_16sdp"/>
+        android:layout_marginTop="@dimen/_16sdp" />
 
 </RelativeLayout>
